--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "modern-js-modules-tooling",
   "version": "1.0.0",
   "description": "17-Modern-JS-Modules-Tooling",
-  "main": "clean.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,8 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "lodash-es": "^4.17.21"
+  },
+  "devDependencies": {
+    "parcel": "^2.15.1"
   }
 }
